--- a/tools/drifting_drafts/css/loom_drafts.css
+++ b/tools/drifting_drafts/css/loom_drafts.css
@@ -26,7 +26,7 @@ body{
   line-height: 1.5;
   text-align: center;
   height: 100%;    
-  touch-action: none;
+  /* touch-action: none; */
 }
 
 main {
@@ -118,7 +118,7 @@ main {
   flex-direction: column;
   width: 100%;
   overflow-y: auto;
-  touch-action: pan-y;
+  /* touch-action: pan-y; */
 }
 
 /* Control */
